# cc-ghpm-skill

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml  spec.md
docs/plan/: 2026-06-26-download-issues.md  2026-06-27-jira-import-phase1.md  2026-06-27-jira-import-phase2.md  2026-06-27-jira-import-phase4.md
docs/spec/: 2026-06-26-download-issues-design.md  2026-06-26-jira-import-design.md  2026-06-27-jira-import-phase2-priority-design.md  2026-06-27-jira-import-phase4-status-design.md
scripts/: __init__.py  acli_client.py  common.py  download_issues.py  jira_mapping.py  list_items.py  move_items.py  to_jira.py  update_items.py
tests/: __init__.py  conftest.py  test_acli_client.py  test_common.py  test_download_issues.py  test_jira_mapping.py  test_list_items.py  test_move_items.py  test_to_jira.py  test_update_items.py
