[project]
name = "ghpm"
version = "0.1.0"
description = "GitHub Projects Manager - Claude Code Skill"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "rich",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
